[package]
name = "filplus-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "query"] }
color-eyre = "0.6.3"
http = "1.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.39.3", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
